# python-krairport-api

./: .gitignore  AGENTS.md  AI_AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  antigravity.json  claude.json  codex.json  krairport-api.md  pyproject.toml
.agents/skills/design-postgis-tables/: SKILL.md
.agents/skills/design-postgis-tables/agents/: openai.yaml
.agents/skills/design-postgres-tables/: SKILL.md
.agents/skills/design-postgres-tables/agents/: openai.yaml
.agents/skills/find-hypertable-candidates/: SKILL.md
.agents/skills/find-hypertable-candidates/agents/: openai.yaml
.agents/skills/migrate-postgres-tables-to-hypertables/: SKILL.md
.agents/skills/migrate-postgres-tables-to-hypertables/agents/: openai.yaml
.agents/skills/pgvector-semantic-search/: SKILL.md
.agents/skills/pgvector-semantic-search/agents/: openai.yaml
.agents/skills/postgres/: SKILL.md
.agents/skills/postgres-hybrid-text-search/: SKILL.md
.agents/skills/postgres-hybrid-text-search/agents/: openai.yaml
.agents/skills/postgres/agents/: openai.yaml
.agents/skills/postgres/references/: design-postgis-tables.md  design-postgres-tables.md  find-hypertable-candidates.md  migrate-postgres-tables-to-hypertables.md  pgvector-semantic-search.md  postgres-hybrid-text-search.md  setup-timescaledb-hypertables.md
.agents/skills/setup-timescaledb-hypertables/: SKILL.md
.agents/skills/setup-timescaledb-hypertables/agents/: openai.yaml
.codex/: config.toml
.codex/agents/: api-designer.toml  backend-developer.toml  frontend-developer.toml  mobile-developer.toml  ui-designer.toml  ui-fixer.toml
docs/: api-coverage.md  coordinates-and-types.md  debug-fixtures.md  repeated-mistakes.md  testing.md  troubleshooting.md
pykrairport/: __init__.py  _convert.py  _http.py  _routing.py  _time.py  _xml.py  airports.py  cli.py  client.py  enums.py  exceptions.py  geo.py  models.py  types.py
pykrairport/providers/: __init__.py  iiac.py  kac.py
src/krairport/: __init__.py  _convert.py  _http.py  _routing.py  _time.py  _xml.py  airports.py  catalog.py  cli.py  client.py  config.py  debug.py  enums.py  exceptions.py  geo.py  models.py  types.py
src/krairport/providers/: __init__.py  iiac.py  kac.py
tests/: conftest.py  runners.py  test_airports.py  test_catalog.py  test_cli.py  test_client.py  test_convert.py  test_debug.py  test_exports.py  test_generated_fixtures.py  test_geo.py  test_http.py  test_iiac.py  test_kac.py  test_live.py  test_pydantic_models.py  test_routing.py  test_time.py  test_xml.py  utils.py
tests/fixtures/: kac_aircraft.xml  kac_arrivals_single.xml  kac_departures.xml  kac_parking_fee.xml
tests/fixtures/departures/: debug_kac_departure.json
tools/streamlit_debug_ui/: README.md  app.py  fixture_writer.py  pyproject.toml
tools/streamlit_debug_ui/tests/: test_fixture_writer.py
