[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-krairport-api"
version = "0.1.0"
description = "Typed Python client for Korean airport APIs across KAC and IIAC."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "digitie"}
]
keywords = ["airport", "korea", "kac", "iiac", "incheon", "flight", "parking", "geo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.8,<3",
  "pykrtour>=0.1.4",
  "requests>=2.31",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "responses>=0.25",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests>=2.31",
]

[project.scripts]
krairport = "krairport.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["krairport*"]

[tool.setuptools.package-data]
krairport = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live_kac: tests that call the real KAC APIs and require KAC_SERVICE_KEY",
  "live_iiac: tests that call the real IIAC APIs and require IIAC_SERVICE_KEY",
]
