[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krairport-debug-ui"
version = "0.1.0"
description = "Streamlit debug UI for creating krairport replay fixtures."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pydantic>=2.8,<3",
  "python-krairport-api @ file:../..",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = [".", "../../src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
